test/pass/basic_syntax/check_varargs.lly
define f(format: string, args: Dynamic...) {    }
define g(args: integer...) { }

f("abc")
f("abc", Dynamic(1), Dynamic("3"))
g()
g(1)
