test/fail/basic_syntax/wrong_arg_count_parameter_func.lly
#[
SyntaxError: g expects 1 args, but got 3.
    from wrong_arg_count_parameter_func.lly:7
]#

define f(g: function(integer)) {
	g(1, 2, 3)
}
